--- a/app/src/main/res/layout/fragment_game_one.xml
+++ b/app/src/main/res/layout/fragment_game_one.xml
@@ -61,7 +61,7 @@
         android:id="@+id/gthgtihthgthgthugt"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/loggi"
+        android:src="@drawable/stoone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1,1"
         app:layout_constraintEnd_toEndOf="parent"
